--- a/Alpha/AlphaMvc/Content/Style.css
+++ b/Alpha/AlphaMvc/Content/Style.css
@@ -853,7 +853,8 @@ select{
     margin-top: 0px;
     width: 100%;
     height: 40px;
-    background-color: #5baa8c;
+    /*background-color: #5baa8c;*/
+    background-color: #db6144;
 }
 
 .tabbar{
