--- a/Alpha/AlphaMvc/Content/calendar/fullcalendar.css
+++ b/Alpha/AlphaMvc/Content/calendar/fullcalendar.css
@@ -210,7 +210,7 @@ NOTE: use percentage font sizes or else old IE chokes
 */
 
 .fc-state-default {
-	background-color: #f5f5f5;
+	/*background-color: #f5f5f5;
 	background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
 	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
 	background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
@@ -221,6 +221,20 @@ NOTE: use percentage font sizes or else old IE chokes
 	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 	color: #333;
 	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);*/
+
+    background-color: #f5f5f5;
+	background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
+	background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
+	background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+	/*background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);*/
+    background-image: linear-gradient(to bottom, #e67676, #e67676);
+	background-repeat: repeat-x;
+	border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	color: #333;
+	/*text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);*/
 	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
@@ -229,17 +243,22 @@ NOTE: use percentage font sizes or else old IE chokes
 .fc-state-active,
 .fc-state-disabled {
 	color: #333333;
-	background-color: #e6e6e6;
+	/*background-color: #e6e6e6;*/
+    background-color: #f4acac;
 }
 
 .fc-state-hover {
 	color: #333333;
 	text-decoration: none;
-	background-position: 0 -15px;
-	-webkit-transition: background-position 0.1s linear;
+	background-position: 0 30px;
+    -webkit-transition: background-position 0.2s;
+	   -moz-transition: background-position 0.2s;
+	     -o-transition: background-position 0.2s;
+	        transition: background-position 0.2s;
+	/*-webkit-transition: background-position 0.1s linear;
 	   -moz-transition: background-position 0.1s linear;
 	     -o-transition: background-position 0.1s linear;
-	        transition: background-position 0.1s linear;
+	        transition: background-position 0.1s linear;*/
 }
 
 .fc-state-down,
@@ -526,14 +545,16 @@ temporary rendered events).
 	font-size: .85em;
 	line-height: 1.3;
 	border-radius: 3px;
-	border: 1px solid #3a87ad; /* default BORDER color */
+    border: 1px solid #b32b0b;
+	/*border: 1px solid #3a87ad;*/
 	font-weight: normal; /* undo jqui's ui-widget-header bold */
 }
 
 .fc-event,
 .fc-event-dot {
 	/*background-color: #3a87ad;  default BACKGROUND color */
-    background-color: #6acdab;
+    /*background-color: #6acdab;*/
+      background-color: #f6c1b5;
 }
 
 /* overpower some of bootstrap's and jqui's styles on <a> tags */
