--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -471,7 +471,7 @@
                                                                 <td>
                                                                     <input id="No" type="text" value="" class="tdno" disabled />
                                                                 </td>
-                                                                <td><input id="txtName" />
+                                                                <td><input type="text" id="txtName" />
                                                                 </td>
                                                                 <td>
                                                                     <input id="CardID" type="text" value="" class="text-size140 txtdisablerow" disabled />
@@ -484,13 +484,13 @@
                                                                 </td>
                                                                 <td>
                                                                     <select class="select-size50">
-                                                                        <option value="1">อา</option>
-                                                                        <option value="2">จ</option>
-                                                                        <option value="3">อ</option>
+                                                                        <option value="0">อา</option>
+                                                                        <option value="1">จ</option>
+                                                                        <option value="2">อ</option>
                                                                         <option value="3">พ</option>
-                                                                        <option value="3">พฤ</option>
-                                                                        <option value="3">ศ</option>
-                                                                        <option value="3">ส</option>
+                                                                        <option value="4">พฤ</option>
+                                                                        <option value="5">ศ</option>
+                                                                        <option value="6">ส</option>
                                                                     </select>
                                                                 </td>
                                                                 <td>
@@ -529,35 +529,26 @@
                                                                     <input id="No" type="text" value="" class="tdno" disabled />
                                                                 </td>
                                                                 <td>
-                                                                    <select>
-                                                                        <option value="1">Technician1</option>
-                                                                        <option value="2">Technician2</option>
-                                                                        <option value="3">Technician3</option>
-                                                                        <option value="3">Technician4</option>
-                                                                        <option value="3">Technician5</option>
-                                                                    </select>
+                                                                    <input type="text" id="txtName" />
                                                                 </td>
                                                                 <td>
                                                                     <input id="CardID" type="text" value="" class="text-size140 txtdisablerow" disabled />
                                                                 </td>
                                                                 <td>
-                                                                    <select class="select-size120">
-                                                                        <option value="1">พนักงานประจำ</option>
-                                                                        <option value="2">พนักงานชั่งคราว</option>
-                                                                    </select>
+                                                                    <input id="txtEmployeeType" type="text" value="" class="text-size140 txtdisablerow" disabled />
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="datepicker5" class="text-size100" />
                                                                 </td>
                                                                 <td>
                                                                     <select class="select-size50">
-                                                                        <option value="1">อา</option>
-                                                                        <option value="2">จ</option>
-                                                                        <option value="3">อ</option>
+                                                                        <option value="0">อา</option>
+                                                                        <option value="1">จ</option>
+                                                                        <option value="2">อ</option>
                                                                         <option value="3">พ</option>
-                                                                        <option value="3">พฤ</option>
-                                                                        <option value="3">ศ</option>
-                                                                        <option value="3">ส</option>
+                                                                        <option value="4">พฤ</option>
+                                                                        <option value="5">ศ</option>
+                                                                        <option value="6">ส</option>
                                                                     </select>
                                                                 </td>
                                                                 <td>
