--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -478,7 +478,7 @@
                                                                 <td><input type="text" id="txtName" name="FName" class="FName" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="txtCardID" type="text" value="" class="text-size140 txtdisablerow" disabled />
+                                                                    <input id="txtCardID" type="text" value="" class="txtCardID text-size140 txtdisablerow" disabled />
                                                                 </td>
                                                                 <td>
                                                                     <input id="txtEmployeeType" type="text" value="" class="text-size140 txtdisablerow" disabled />
@@ -539,7 +539,7 @@
                                                                     <input type="text" id="txtName" name="txtName" class="FName"/>
                                                                 </td>
                                                                 <td>
-                                                                    <input id="txtCardID" type="text" value="" class="CardID text-size140 txtdisablerow" disabled />
+                                                                    <input id="txtCardID" type="text" value="" class="txtCardID text-size140 txtdisablerow" disabled />
                                                                 </td>
                                                                 <td>
                                                                     <input id="txtEmployeeType" type="text" value="" class="EmployeeType text-size140 txtdisablerow" disabled />
@@ -589,7 +589,7 @@
                                                         </tbody>
                                                     </table>
                                                 </div>
-                                                <button id="add-row2" class="btn btn-primary" onclick="AddrowManpower()">Add Row</button><br /><br />
+                                                <button id="add-row2" class="btn btn-primary" onblur="AddrowManpower()">Add Row</button><br /><br />
                                                 <table>
                                                     <tr>
                                                         <td>
