--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -53,7 +53,7 @@
         <form>
                 <ul class="form-style-1">
                     <li>
-                        <label class="btnnew">Doc Version</label>&nbsp;<img src="@Url.Content("~/images/btnNewVersion.jpg")" alt="IMAGES" class="btnimage-3" />
+                        <label class="btnnew">Doc Version</label>&nbsp;<img src="@Url.Content("~/images/btnNewVersion.png")" alt="IMAGES" class="btnnewversionCreate" />
                     </li>
                     <li>
                         <input type="text" id = "txtDocver"  name="field1" class="field-select-small-2" placeholder="1" disabled />
