--- a/Alpha/AlphaMvc/Content/Tab/easy-responsive-tabs.css
+++ b/Alpha/AlphaMvc/Content/Tab/easy-responsive-tabs.css
@@ -45,11 +45,14 @@ h2.resp-accordion {
 }
 
 .resp-tab-active {
-	border: 1px solid #5AB1D0 !important;
+	/*border: 1px solid #5AB1D0 !important;*/
+    /*border: 1px solid #cd300c !important;*/
+    border: 1px solid #c1c1c1 !important;
 	border-bottom: none;
 	margin-bottom: -1px !important;
 	padding: 12px 14px 14px 14px !important;
-	border-top: 4px solid #5AB1D0 !important;
+	/*border-top: 4px solid #5AB1D0 !important;*/
+    border-top: 4px solid #cd300c !important;
 	border-bottom: 0px #fff solid !important;
 }
 
