--- a/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
@@ -54,7 +54,7 @@
         <form>
             <ul class="form-style-1">
                 <li>
-                    <label class="btnnew">Doc Version</label>&nbsp;<img src="@Url.Content("~/images/btnNewVersion.jpg")" alt="IMAGES" class="btnimage-3" onclick="GetDocversion()" />
+                    <label class="btnnew">Doc Version</label>&nbsp;<img src="@Url.Content("~/images/btnNewVersion.png")" alt="IMAGES" class="btnnewversionUpdate" onclick="GetDocversion()" />
                 </li>
                 <li>
                     <input type="text" id="txtDocver" name="field1" class="field-select-small-2" placeholder="V1" disabled />
