--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -473,15 +473,15 @@
                                                                     <input id="No" type="text" value="" class="tdno" disabled />
                                                                 </td>
                                                                 <td @*class="hidecolumn"*@>
-                                                                    <input id="txtTechnicianID" type="text" value="" class="txtTechnicianID" disabled />
+                                                                    <input id="txtTechnicianID" type="text" value="" class="TechnicianID" disabled />
                                                                 </td>
                                                                 <td><input type="text" id="txtName" name="FName" class="FName" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="txtCardID" type="text" value="" class="txtCardID text-size140 txtdisablerow" disabled />
+                                                                    <input id="txtCardID" type="text" value="" class="CardID text-size140 txtdisablerow" disabled />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="txtEmployeeType" type="text" value="" class="text-size140 txtdisablerow" disabled />
+                                                                    <input id="txtTechnicianType" type="text" value="" class="TechnicianType text-size140 txtdisablerow" disabled />
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="datepicker4" class="dtDate text-size100" />
@@ -498,25 +498,25 @@
                                                                     </select>
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="Time" name="CreateDate" class="text-size50 textcenter">
+                                                                    <input type="text" id="Time" name="CreateDate" class="ManpowerTime text-size50 textcenter">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtFrom" name="timepicker" class="timepicker text-size50 textcenter">
+                                                                    <input type="text" id="txtFrom" name="timepicker" class="WorkingFrom timepicker text-size50 textcenter">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtTo" name="timepicker" class="timepicker text-size50 textcenter">
+                                                                    <input type="text" id="txtTo" name="timepicker" class="WorkingTo timepicker text-size50 textcenter">
                                                                 </td>
                                                                 <td>
-                                                                    <input id="Hours" type="text" value="" class="text-size50 textcenter" />
+                                                                    <input id="Hours" type="text" value="" class="ManpowerTotalHours text-size50 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="Normal" type="text" value="" class="text-size110 textcenter" />
+                                                                    <input id="Normal" type="text" value="" class="ManpowerNormal text-size110 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="Premium" type="text" value="" class="text-size110 textcenter" />
+                                                                    <input id="Premium" type="text" value="" class="ManpowerPremium text-size110 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="Special" type="text" value="" class="text-size110 textcenter" />
+                                                                    <input id="Special" type="text" value="" class="ManpowerSpecial text-size110 textcenter" />
                                                                 </td>
                                                                 <td>
                                                                     <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -533,16 +533,16 @@
                                                                     <input id="No" type="text" value="" class="tdno" disabled />
                                                                 </td>
                                                                 <td @*class="hidecolumn"*@>
-                                                                    <input id="txtTechnicianID" type="text" value="" class="txtTechnicianID" disabled />
+                                                                    <input id="txtTechnicianID" type="text" value="" class="TechnicianID" disabled />
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="txtName" name="txtName" class="FName"/>
                                                                 </td>
                                                                 <td>
-                                                                    <input id="txtCardID" type="text" value="" class="txtCardID text-size140 txtdisablerow" disabled />
+                                                                    <input id="txtCardID" type="text" value="" class="CardID text-size140 txtdisablerow" disabled />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="txtEmployeeType" type="text" value="" class="EmployeeType text-size140 txtdisablerow" disabled />
+                                                                    <input id="txtTechnicianType" type="text" value="" class="TechnicianType text-size140 txtdisablerow" disabled />
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="datepicker5" class="dtDate text-size100" />
@@ -559,25 +559,25 @@
                                                                     </select>
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="Time" name="CreateDate" class="txtTime text-size50 textcenter">
+                                                                    <input type="text" id="Time" name="CreateDate" class="ManpowerTime text-size50 textcenter">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtFrom" name="timepicker" class="txtFrom timepicker text-size50 textcenter">
+                                                                    <input type="text" id="txtFrom" name="timepicker" class="WorkingFrom timepicker text-size50 textcenter">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtTo" name="timepicker" class="txtTo timepicker text-size50 textcenter">
+                                                                    <input type="text" id="txtTo" name="timepicker" class="WorkingTo timepicker text-size50 textcenter">
                                                                 </td>
                                                                 <td>
-                                                                    <input id="Hours" type="text" value="" class="text-size50 textcenter" />
+                                                                    <input id="Hours" type="text" value="" class="ManpowerTotalHours text-size50 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="Normal" type="text" value="" class="text-size110 textcenter" />
+                                                                    <input id="Normal" type="text" value="" class="ManpowerNormal text-size110 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="Premium" type="text" value="" class="text-size110 textcenter" />
+                                                                    <input id="Premium" type="text" value="" class="ManpowerPremium text-size110 textcenter" />
                                                                 </td>
                                                                 <td>
-                                                                    <input id="Special" type="text" value="" class="text-size110 textcenter" />
+                                                                    <input id="Special" type="text" value="" class="ManpowerSpecial text-size110 textcenter" />
                                                                 </td>
                                                                 <td>
                                                                     <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
