--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -888,6 +888,7 @@
         var Isview = val[2];
         alert(Isview);
         ControlEnable(Isview);
+        alert(@Request.Params["id"]);
         GetData(@Request.Params["id"]);
         GetJobOrderBorrow(@Request.Params["id"]);
         
