--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -416,6 +416,9 @@
                                                     <tr>
                                                         <th rowspan="3"></th>
                                                         <th rowspan="3">No.</th>
+                                                        <th rowspan="3" @*class="hidecolumn"*@>ManpowerID</th>
+                                                        <th rowspan="3" @*class="hidecolumn"*@>TechnicianID</th>
+                                                        <th rowspan="3" @*class="hidecolumn"*@>JobID</th>
                                                         <th rowspan="3">ชื่อ</th>
                                                         <th rowspan="3">เลขบัตรประชาชน</th>
                                                         <th rowspan="3">ประเภทพนักงาน</th>
@@ -439,7 +442,7 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-                                                    <tr>
+                                                    <tr class="RowCal5">
                                                         <td>
                                                             <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                                                         </td>
@@ -447,25 +450,25 @@
                                                             <input id="No" type="text" value="" class="tdno" disabled />
                                                         </td>
                                                         <td>
-                                                            <select>
-                                                                <option value="1">Technician1</option>
-                                                                <option value="2">Technician2</option>
-                                                                <option value="3">Technician3</option>
-                                                                <option value="3">Technician4</option>
-                                                                <option value="3">Technician5</option>
-                                                            </select>
+                                                            <input type="text" id="txtName" name="txtName" class="FName" />
+                                                        </td>
+                                                        <td @*class="hidecolumn"*@>
+                                                            <input id="ManpowerID" type="text" value="" class="ManpowerID" disabled />
+                                                        </td>
+                                                        <td @*class="hidecolumn"*@>
+                                                            <input id="txtTechnicianID" type="text" value="" class="TechnicianID" disabled />
+                                                        </td>
+                                                        <td  @*class="hidecolumn"*@>
+                                                            <input id="JobID" type="text" value="" class="JobID" disabled />
                                                         </td>
                                                         <td>
-                                                            <input id="CardID" type="text" value="" class="text-size140 txtdisablerow" disabled />
+                                                            <input id="txtCardID" type="text" value="" class="CardID text-size140 txtdisablerow" disabled />
                                                         </td>
                                                         <td>
-                                                            <select class="select-size120">
-                                                                <option value="1">พนักงานประจำ</option>
-                                                                <option value="2">พนักงานชั่งคราว</option>
-                                                            </select>
+                                                            <input id="txtTechnicianType" type="text" value="" class="TechnicianType text-size140 txtdisablerow" disabled />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="datepicker4" class="text-size100" />
+                                                            <input type="text" id="datepicker5" class="dtDate text-size100" />
                                                         </td>
                                                         <td>
                                                             <select class="select-size50">
@@ -479,25 +482,25 @@
                                                             </select>
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="Time" name="CreateDate" class="text-size50 textcenter">
+                                                            <input type="text" id="Time" name="CreateDate" class="ManpowerTime text-size50 textcenter">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtFrom" name="timepicker" class="timepicker text-size50 textcenter">
+                                                            <input type="text" id="txtFrom" name="timepicker" class="WorkingFrom timepicker text-size50 textcenter">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtTo" name="timepicker" class="timepicker text-size50 textcenter">
+                                                            <input type="text" id="txtTo" name="timepicker" class="WorkingTo timepicker text-size50 textcenter">
                                                         </td>
                                                         <td>
-                                                            <input id="Hours" type="text" value="" class="text-size50 textcenter" />
+                                                            <input id="Hours" type="text" value="" class="ManpowerTotalHours text-size50 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="Normal" type="text" value="" class="text-size110 textcenter" />
+                                                            <input id="Normal" type="text" value="" class="ManpowerNormal text-size110 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="Premium" type="text" value="" class="text-size110 textcenter" />
+                                                            <input id="Premium" type="text" value="" class="ManpowerPremium text-size110 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="Special" type="text" value="" class="text-size110 textcenter" />
+                                                            <input id="Special" type="text" value="" class="ManpowerSpecial text-size110 textcenter" />
                                                         </td>
                                                         <td>
                                                             <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -506,33 +509,33 @@
                                                             <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                         </td>
                                                     </tr>
-                                                    <tr id="add-template2">
+                                                    <tr class="RowCal5" id="add-template2">
                                                         <td>
                                                             <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                                                         </td>
                                                         <td>
                                                             <input id="No" type="text" value="" class="tdno" disabled />
                                                         </td>
-                                                        <td>
-                                                            <select>
-                                                                <option value="1">Technician1</option>
-                                                                <option value="2">Technician2</option>
-                                                                <option value="3">Technician3</option>
-                                                                <option value="3">Technician4</option>
-                                                                <option value="3">Technician5</option>
-                                                            </select>
+                                                        <td @*class="hidecolumn"*@>
+                                                            <input id="ManpowerID" type="text" value="" class="ManpowerID" disabled />
+                                                        </td>
+                                                        <td @*class="hidecolumn"*@>
+                                                            <input id="txtTechnicianID" type="text" value="" class="TechnicianID" disabled />
+                                                        </td>
+                                                        <td @*class="hidecolumn"*@>
+                                                            <input id="JobID" type="text" value="" class="JobID" disabled />
                                                         </td>
                                                         <td>
-                                                            <input id="CardID" type="text" value="" class="text-size140 txtdisablerow" disabled />
+                                                            <input type="text" id="txtName" name="txtName" class="FName" />
                                                         </td>
                                                         <td>
-                                                            <select class="select-size120">
-                                                                <option value="1">พนักงานประจำ</option>
-                                                                <option value="2">พนักงานชั่งคราว</option>
-                                                            </select>
+                                                            <input id="txtCardID" type="text" value="" class="CardID text-size140 txtdisablerow" disabled />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="datepicker5" class="text-size100" />
+                                                            <input id="txtTechnicianType" type="text" value="" class="TechnicianType text-size140 txtdisablerow" disabled />
+                                                        </td>
+                                                        <td>
+                                                            <input type="text" id="datepicker5" class="dtDate text-size100" />
                                                         </td>
                                                         <td>
                                                             <select class="select-size50">
@@ -546,25 +549,25 @@
                                                             </select>
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="Time" name="CreateDate" class="text-size50 textcenter">
+                                                            <input type="text" id="Time" name="CreateDate" class="ManpowerTime text-size50 textcenter">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtFrom" name="timepicker" class="timepicker text-size50 textcenter">
+                                                            <input type="text" id="txtFrom" name="timepicker" class="WorkingFrom timepicker text-size50 textcenter">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtTo" name="timepicker" class="timepicker text-size50 textcenter">
+                                                            <input type="text" id="txtTo" name="timepicker" class="WorkingTo timepicker text-size50 textcenter">
                                                         </td>
                                                         <td>
-                                                            <input id="Hours" type="text" value="" class="text-size50 textcenter" />
+                                                            <input id="Hours" type="text" value="" class="ManpowerTotalHours text-size50 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="Normal" type="text" value="" class="text-size110 textcenter" />
+                                                            <input id="Normal" type="text" value="" class="ManpowerNormal text-size110 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="Premium" type="text" value="" class="text-size110 textcenter" />
+                                                            <input id="Premium" type="text" value="" class="ManpowerPremium text-size110 textcenter" />
                                                         </td>
                                                         <td>
-                                                            <input id="Special" type="text" value="" class="text-size110 textcenter" />
+                                                            <input id="Special" type="text" value="" class="ManpowerSpecial text-size110 textcenter" />
                                                         </td>
                                                         <td>
                                                             <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -576,7 +579,7 @@
                                                 </tbody>
                                             </table>
                                         </div>
-                                        <button id="add-row2" class="btn btn-primary">Add Row</button><br /><br />
+                                        <button id="add-row2" class="btn btn-primary" onblur="AddrowManpower()">Add Row</button><br /><br />
                                         <table>
                                             <tr>
                                                 <td>
