--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -501,7 +501,7 @@
                                                                     <input type="text" id="Time" name="CreateDate" class="ManpowerTime text-size50 textcenter">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtFrom" name="timepicker" class="WorkingFrom timepicker text-size50 textcenter">
+                                                                    <input type="text" id="txtFrom" name="timepicker" class="WorkingFrom timepicker text-size50 textcenter" onchange="CalTotalHour()">
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="txtTo" name="timepicker" class="WorkingTo timepicker text-size50 textcenter">
@@ -562,10 +562,10 @@
                                                                     <input type="text" id="Time" name="CreateDate" class="ManpowerTime text-size50 textcenter">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtFrom" name="timepicker" class="WorkingFrom timepicker text-size50 textcenter">
+                                                                    <input type="text" id="txtFrom" name="timepicker" class="WorkingFrom timepicker text-size50 textcenter" >
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtTo" name="timepicker" class="WorkingTo timepicker text-size50 textcenter">
+                                                                    <input type="text" id="txtTo" name="timepicker" class="WorkingTo timepicker text-size50 textcenter" >
                                                                 </td>
                                                                 <td>
                                                                     <input id="Hours" type="text" value="" class="ManpowerTotalHours text-size50 textcenter" />
